--- a/gallery.html
+++ b/gallery.html
@@ -12,8 +12,11 @@
         <img src="./imageshomework/69043299_149898902773162_2698895108390701122_n.jpg" alt="the second car in the picture">
         <img src="./imageshomework/73546074_766440263809423_6275676310517144401_n.jpg" alt="the pepole in the picture">
     </div>
-    <a href="http://127.0.0.1:5500/pages1/index.html">pages1</a>
-    <p>Hello</p>
+    <a href="../pages1/index.html">pages1</a>
     <h3>Hello</h3>
+    <div>
+        <input type="button" value="github">
+    </div>
+
 </body>
 </html>
