--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>about github</title>
 </head>
 <body>
+    <button>dog</button>
     <h1>My work in GitHub</h1>
     <p>This is teg represents a paragraph</p>
-    <a href="http://127.0.0.1:5500/pages2/gallery.html">pages2</a>
-    <img src="../pages2/imageshomework/66626512_125259068735470_7778098111537148335_n.jpg" alt="car">
+    <a href="./gallery.html">pages2</a>
+    <img src="./imageshomework/66626512_125259068735470_7778098111537148335_n.jpg" alt="car">
 </body>
 </html>
